<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPropertyManager">

    <ImageView
        android:id="@+id/imgPropertyPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="350dp"
        android:contentDescription="@string/places_image_desc_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtNameOfProperty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="308dp"
        android:text="@string/txt_new_property_title"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPropertyPhoto" />

    <TextView
        android:id="@+id/txtPropertyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="8"
        android:padding="5dp"
        android:text="@string/string_txt_property_info_place"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameOfProperty" />

    <TextView
        android:id="@+id/lblSellShares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lbl_invest_in_property_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtSellLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_select_buy_percent" />

        <EditText
            android:id="@+id/txtBuyPercentage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_enter_percent_buy_text"
            android:inputType="number" />

        <Button
            android:id="@+id/btnBuyShares"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btn_buy_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCashCostValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/txt_cash_text_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</android.support.constraint.ConstraintLayout>