<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDashboardMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnMyProperties"
            android:layout_width="48dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:contentDescription="@string/default_building_icon_desc"
            app:srcCompat="@drawable/my_properties_button_drawable" />

        <TextView
            android:id="@+id/txtMyProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="500"
            android:text="@string/btn_my_properties_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtUserDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_username_displayname"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDisplayCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/txt_cash_text_value"
        android:textAlignment="center"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txtAggregatePropertyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/txt_property_value_text" />

    <ProgressBar
        android:id="@+id/progAggregatePropertyValue"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="100000000" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnShowAvailable"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_show_available_properties_text"
            app:layout_constraintBottom_toTopOf="@+id/btnPremiumShop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btnPremiumShop"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_out_of_cash_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnShowAvailable" />
    </android.support.constraint.ConstraintLayout>

    <!--<TextView-->
        <!--android:id="@+id/lblMapLable"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_marginStart="5dp"-->
        <!--android:text="@string/lable_property_view_text" />-->


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:contentDescription="@string/places_image_desc_text"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sheridan_go_logo" />

    <TextView
        android:id="@+id/txtRevenueGained"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:text="@string/txt_revenue_value_text" />

</android.support.v7.widget.LinearLayoutCompat>