<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">

        <TextView
            android:id="@+id/txtMyPropName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_myprop_name_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtMyPropPercentageOwned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/txt_myprop_ownedpercent_text" />

        <TextView
            android:id="@+id/txtMyPropIncomeBenefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/txt_myprop_income_text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnShowDetails"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="9"
        android:padding="5dp"
        android:text="@string/btn_show_details_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />

</LinearLayout>